--- a/css/style.css
+++ b/css/style.css
@@ -699,7 +699,11 @@ body {
     color: #e2bc3b;
     font-size: 30px;
     padding: 0 80px;
-    border: 1px solid #000; }
+    border: 1px solid #000;
+    -webkit-transition: .5s;
+    transition: .5s; }
+    .video-form .submit:hover {
+      background: #276b68; }
 
 .video-reviews {
   background: #fff;
@@ -720,6 +724,9 @@ body {
 .video-inner {
   background-image: url(../images/inner-page-video-bg.png);
   background-color: #235f5e; }
+  .video-inner .play {
+    width: 180px;
+    height: 180px; }
 
 .video-banner-text {
   padding: 65px 0; }
