--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -48,13 +48,23 @@
         margin: 0 -15px;
     }
     .contact-address .text span {
-	display: block;
-	font-size: 15px;
-	line-height: 1.25;
-        br{
+        display: block;
+        font-size: 15px;
+        line-height: 1.25;
+        br {
             display: none;
         }
-}
+    }
+    .video-type .type-button a {
+        padding: 5px 10px;
+        font-size: 20px;
+        text-align: left;
+    }
+    .detailes-video h3 {
+        font-size: 26px;
+        padding: 7px 0;
+        min-height: 45px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -93,14 +103,52 @@
         text-align: center;
     }
     #mail-send #banner-background {
-	background-image: none;
-}
-    .contact .form-left,.contact .form-right {
-	max-width: 100%;
-}
-    .contact-address{
-        .phone{
+        background-image: none;
+    }
+    .contact .form-left,
+    .contact .form-right {
+        max-width: 100%;
+    }
+    .contact-address {
+        .phone {
             margin-bottom: 15px;
+        }
+    }
+    .video-banner-text .head h2 {
+        font-size: 38px;
+    }
+    .video-type .head h2 {
+        font-size: 32px;
+        margin-bottom: 10px;
+    }
+    .videos-item {
+        max-width: 320px;
+        margin: 0 auto;
+        padding: 15px;
+    }
+    .video-type {
+        padding-bottom: 25px;
+    }
+    .form-padding {
+        padding: 0 15px;
+    }
+    .video-form .textarea,
+    .video-form .send {
+        margin-top: 0;
+    }
+    .video-form {
+        padding-top: 60px;
+    }
+    .video-inner {
+        h2 {
+            font-size: 33px;
+            position: absolute;
+            top: 47px;
+            left: 0;
+            padding: 0 15px;
+            br {
+                display: none;
+            }
         }
     }
 }
@@ -154,13 +202,16 @@
     #banner-background {
         background-image: none;
     }
-    .hand{
+    .hand {
         display: none;
     }
     .request-send p {
-	font-size: 23px;
-}
+        font-size: 23px;
+    }
     .request-send {
-	padding-bottom: 50px;
+        padding-bottom: 50px;
+    }
+    .vides-wraper, .form-padding-wraper {
+	margin: 0 -15px;
 }
 }
