--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,15 @@ body {
   color: #102f46;
   text-align: center; }
 
+.disply-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; }
+
 /*================ Header ================*/
 .logo {
   display: inline-block;
@@ -682,9 +691,7 @@ body {
   background: url(../images/arrow.png) right no-repeat;
   margin: 10px 0;
   outline: none;
-  color: #000;
-  color: transparent;
-  text-shadow: 0 0 0 #000; }
+  color: #000; }
 
 .video-select-type::-ms-expand {
   display: none; }
@@ -703,7 +710,8 @@ body {
     -webkit-transition: .5s;
     transition: .5s; }
     .video-form .submit:hover {
-      background: #276b68; }
+      background: #276b68;
+      color: #fff; }
 
 .video-reviews {
   background: #fff;
@@ -742,3 +750,41 @@ body {
   display: block;
   line-height: 0;
   margin-bottom: 6px; }
+
+/*================ Ecommerce Page ================*/
+#ecommerce-page #banner-background {
+  background-image: url(../images/Ecommerce-banner-bg.png); }
+#ecommerce-page .video-type {
+  background: #fff; }
+#ecommerce-page .video-type .type-button a {
+  -webkit-box-shadow: 0 0 5px #000;
+          box-shadow: 0 0 5px #000; }
+
+.video-type .videos-item p {
+  text-align: center;
+  margin: 15px 0;
+  color: #000;
+  font-size: 26px; }
+
+/*================ Ecommerce store ================*/
+.ecommerce-store {
+  background: #235f5e;
+  padding: 30px 0;
+  font-family: "Noto Sans", sans-serif;
+  color: #fff; }
+  .ecommerce-store h3 {
+    margin: 0;
+    font-size: 43px;
+    line-height: 1;
+    margin-bottom: 5px; }
+  .ecommerce-store p {
+    margin: 0;
+    font-size: 14px;
+    line-height: 1.5; }
+  .ecommerce-store .disply-flex {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+
+.just-thumbnail img {
+  width: 100%; }
