--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -80,6 +80,9 @@
     .form-padding-wraper {
         margin: 0 -24px;
     }
+    .app-style .disply-flex {
+        min-height: 320px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -178,6 +181,12 @@
     .video-type .videos-item p {
         margin-bottom: 0;
     }
+    .videos-item {
+        margin-bottom: 85px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
 }
 
 @media (max-width:575px) {
@@ -247,5 +256,9 @@
     }
     .ecommerce-store h3 {
         font-size: 35px;
+    }
+    .app-thumbnail .img-small {
+        width: 130px;
+        height: 130px;
     }
 }
