--- a/css/style.css
+++ b/css/style.css
@@ -829,3 +829,13 @@ body {
     left: 0;
     right: 0;
     top: -32%; }
+
+.hidden-it {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+  height: 0;
+  width: 0;
+  font-size: 0;
+  overflow: hidden;
+  visibility: hidden; }
