--- a/css/style.scss
+++ b/css/style.scss
@@ -1061,3 +1061,14 @@ body {
         top: -32%;
     }
 }
+
+.hidden-it {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+    height: 0;
+    width: 0;
+    font-size: 0;
+    overflow: hidden;
+    visibility: hidden;
+}
