--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -187,6 +187,12 @@
             margin-bottom: 0;
         }
     }
+    .branding-check {
+        margin-bottom: 50px;
+    }
+    .branding-baner {
+        background-image: none;
+    }
 }
 
 @media (max-width:575px) {
@@ -260,5 +266,8 @@
     .app-thumbnail .img-small {
         width: 130px;
         height: 130px;
+    }
+    .branding-check label {
+        font-size: 20px;
     }
 }
