--- a/css/style.css
+++ b/css/style.css
@@ -839,3 +839,57 @@ body {
   font-size: 0;
   overflow: hidden;
   visibility: hidden; }
+
+/*================ Branding Page ================*/
+.branding-baner {
+  background-image: url(../images/branding-bg.png);
+  background-repeat: no-repeat;
+  background-position: center right;
+  background-size: auto 100%; }
+  .branding-baner .disply-flex {
+    min-height: 424px; }
+
+.branding-check {
+  background: #276b68;
+  padding: 65px 0;
+  margin-bottom: 20px; }
+  .branding-check .col-md-4 {
+    margin: 10px 0; }
+  .branding-check label {
+    color: #fff;
+    font-size: 22px;
+    font-weight: 300;
+    cursor: pointer;
+    float: left;
+    width: calc( 100% - 37px); }
+  .branding-check small {
+    font-size: 21px;
+    color: #e2bc3b;
+    position: absolute;
+    right: 15px;
+    top: 0; }
+  .branding-check input[type="checkbox"] {
+    display: none; }
+  .branding-check input[type="checkbox"] + label span {
+    height: 22px;
+    width: 22px;
+    background: #fff;
+    border: 2px solid #dcdbdb;
+    cursor: pointer;
+    position: relative;
+    top: 4px;
+    margin-right: 15px;
+    float: left;
+    border-radius: 4px; }
+  .branding-check input[type="checkbox"]:checked + label span:after {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #e2bc3b;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 50%;
+    margin-top: -5px; }
