--- a/css/style.scss
+++ b/css/style.scss
@@ -1072,3 +1072,72 @@ body {
     overflow: hidden;
     visibility: hidden;
 }
+
+/*================ Branding Page ================*/
+
+.branding-baner {
+    background-image: url(../images/branding-bg.png);
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-size: auto 100%;
+    .disply-flex {
+        min-height: 424px;
+    }
+}
+
+.branding-check {
+    background: #276b68;
+    padding: 65px 0;
+    margin-bottom: 20px;
+    .col-md-4{
+        margin: 10px 0;
+    }
+    label {
+        color: #fff;
+        font-size: 22px;
+        font-weight: 300;
+        cursor: pointer;
+        float: left;
+        width: calc( 100% - 37px);
+
+    }
+    small{
+        font-size: 21px;
+        color: #e2bc3b;
+        position: absolute;
+        right: 15px;
+        top: 0;
+    }
+    input[type="checkbox"] {
+        display: none;
+    }
+
+    input[type="checkbox"] + label span {
+        height: 22px;
+        width: 22px;
+        background: #fff;
+        border: 2px solid #dcdbdb;
+        cursor: pointer;
+        position: relative;
+        top: 4px;
+        margin-right: 15px;
+        float: left;
+        border-radius: 4px;
+    }
+
+    input[type="checkbox"]:checked + label span {
+        &:after {
+            content: "";
+            width: 10px;
+            height: 10px;
+            background: #e2bc3b;
+            border-radius: 50%;
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            top: 50%;
+            margin-top: -5px;
+        }
+    }
+}
