custome soluation page done

--- a/css/style.scss
+++ b/css/style.scss
@@ -1141,3 +1141,12 @@ body {
         }
     }
 }
+/*================ Soluation Page ================*/
+#soluation-page{
+    #banner-background{
+        background-image: url(../images/soluation-bg.png);
+    }
+}
+.soluation-banner{
+    background-image: url(../images/soluation-bg-banner.jpg);
+}
