--- a/css/style.css
+++ b/css/style.css
@@ -893,3 +893,10 @@ body {
     margin: 0 auto;
     top: 50%;
     margin-top: -5px; }
+
+/*================ Soluation Page ================*/
+#soluation-page #banner-background {
+  background-image: url(../images/soluation-bg.png); }
+
+.soluation-banner {
+  background-image: url(../images/soluation-bg-banner.jpg); }
