--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -193,6 +193,9 @@
     .branding-baner {
         background-image: none;
     }
+    #contact-send {
+        margin-top: -60px;
+    }
 }
 
 @media (max-width:575px) {
