--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+a:hover {
+  text-decoration: none; }
+
 /*================ Universal Code ================*/
 body {
   font-family: 'Ubuntu', sans-serif;
@@ -296,7 +299,8 @@ body {
       margin: 0;
       text-align: center;
       font-size: 30px;
-      line-height: 1.27; }
+      line-height: 1.27;
+      color: #000; }
 
 /*================ Footer ================*/
 .main-footer {
@@ -378,7 +382,11 @@ body {
     border: 1px solid #fff;
     border-radius: 0;
     padding: 6px 37px;
-    margin-top: 8px; }
+    margin-top: 8px;
+    -webkit-transition: .5s;
+    transition: .5s; }
+    .service-request .btn:hover {
+      background: #276B68; }
 
 /*================ Portfolio Page ================*/
 #banner-background {
@@ -386,7 +394,7 @@ body {
 
 .portfolio {
   padding: 75px 0 0 0; }
-  .portfolio .title h2 {
+  .portfolio .head-2 h2 {
     margin: 0;
     padding-left: 10px;
     margin-bottom: 25px; }
@@ -533,6 +541,9 @@ body {
     margin-left: auto; }
   .contact .send {
     max-width: 303px; }
+
+#contact-send {
+  margin-top: -26px; }
 
 .text-field button,
 .text-field input,
