--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,7 +73,13 @@
     margin: 0 -24px; }
 
   .app-style .disply-flex {
-    min-height: 320px; } }
+    min-height: 320px; }
+
+  .video-type .border-text {
+    font-size: 24px; }
+
+  #website-page .video-banner-text {
+    padding-bottom: 116px; } }
 @media (max-width: 767px) {
   .banner .women-pic {
     display: none; }
@@ -177,7 +183,10 @@
     background-image: none; }
 
   #contact-send {
-    margin-top: -60px; } }
+    margin-top: -60px; }
+
+  #website-page .ecommerce-store {
+    padding-bottom: 50px; } }
 @media (max-width: 575px) {
   .banner .heading h1 {
     font: 34px/1.25 "TeX Gyre Adventor"; }
