--- a/css/style.scss
+++ b/css/style.scss
@@ -3,9 +3,10 @@ sans-serif;
 $t: 'TeX Gyre Adventor';
 $n:'Noto Sans',
 sans-serif;
-a:hover{
+a:hover {
     text-decoration: none;
 }
+
 /*================ Universal Code ================*/
 
 body {
@@ -493,7 +494,7 @@ body {
         padding: 6px 37px;
         margin-top: 8px;
         transition: .5s;
-        &:hover{
+        &:hover {
             background: #276B68;
         }
     }
@@ -687,7 +688,8 @@ body {
         max-width: 303px;
     }
 }
-#contact-send{
+
+#contact-send {
     margin-top: -26px;
 }
 
@@ -812,20 +814,21 @@ body {
             }
 
         }
-        a.current {
 
-            &:after {
-                content: "";
-                position: absolute;
-                height: 16px;
-                width: 16px;
-                background: #276b68;
-                top: 50%;
-                right: 12px;
-                border-radius: 50%;
-                margin-top: -8px;
-            }
-        }
+    }
+}
+
+.videos-item.current .type-button a {
+    &:after {
+        content: "";
+        position: absolute;
+        height: 16px;
+        width: 16px;
+        background: #276b68;
+        top: 50%;
+        right: 12px;
+        border-radius: 50%;
+        margin-top: -8px;
     }
 }
 
@@ -1100,7 +1103,7 @@ body {
     background: #276b68;
     padding: 65px 0;
     margin-bottom: 20px;
-    .col-md-4{
+    .col-md-4 {
         margin: 10px 0;
     }
     label {
@@ -1112,7 +1115,7 @@ body {
         width: calc( 100% - 37px);
 
     }
-    small{
+    small {
         font-size: 21px;
         color: #e2bc3b;
         position: absolute;
@@ -1152,12 +1155,54 @@ body {
         }
     }
 }
+
 /*================ Soluation Page ================*/
-#soluation-page{
-    #banner-background{
+
+#soluation-page {
+    #banner-background {
         background-image: url(../images/soluation-bg.png);
     }
 }
-.soluation-banner{
+
+.soluation-banner {
     background-image: url(../images/soluation-bg-banner.jpg);
+}
+
+/*================ Website Page ================*/
+
+.page {
+    .video-type .type-button a {
+        box-shadow: 0 0 5px #000;
+    }
+}
+
+#website-page {
+    #banner-background {
+        background-image: url(../images/website-small-bg.png);
+    }
+    .video-type {
+        background: #fff;
+    }
+
+    .ecommerce-store {
+        padding-bottom: 0;
+    }
+    .video-banner-text{
+        padding-bottom: 160px;
+    }
+}
+.video-type{
+    .border-text{
+        font-size: 30px;
+        text-align: center;
+        border-top: 95px solid #276b68;
+        border-bottom: 12px solid #276b68;
+        box-shadow: 0 0 5px #000;
+        padding: 20px 10px;
+    }
+    .videos-item.current{
+        .border-text{
+            border-color: #e2bc3b;
+        }
+    }
 }
